2004-09-01 11:59  jodrell

	* lib/Gtk2/PodViewer.pm: corrected version.

2004-08-31 17:21  jodrell

	* lib/Gtk2/: PodViewer.pm, PodViewer/Parser.pm: lot of tweaks to
	  improve rendering - links with named text (L<Foo|Bar>) work as
	  expected.

2004-05-21 11:05  jodrell

	* src/podviewer: updated for Gtk2::FileChooser.

2004-04-28 10:36  jodrell

	* podviewer.png, podviewer.xcf, src/podviewer: fixed index clear on
	  blank, added icons.

2004-04-26 17:26  jodrell

	* src/podviewer: now tracks window state.

2004-04-18 17:44  jodrell

	* lib/Gtk2/PodViewer.pm, src/podviewer: added a nicer Open dialog.

2004-03-29 21:48  jodrell

	* src/podviewer: added F5 accelerator.

2004-03-27 14:01  jodrell

	* src/podviewer: fixed view cursor when searching, and added a
	  blank page system.

2004-03-16 23:49  jodrell

	* lib/Gtk2/PodViewer.pm: updated version for future release.

2004-03-16 23:41  jodrell

	* src/podviewer: made the combo case-sensitive.

2004-03-15 22:02  jodrell

	* src/podviewer: muppet's patch to implement a back button, and my
	  own modification to implement a forward button.

2004-03-13 15:52  jodrell

	* src/podviewer: removed stuff that depended on gtk-config.

2004-03-11 13:44  jodrell

	* lib/Gtk2/PodViewer/Parser.pm: committing the defined/exists
	  thing, which I missed.

2004-03-10 21:52  jodrell

	* src/podviewer: slight change to the way Ctrl-F works - more
	  consistent now.

2004-03-10 21:47  jodrell

	* lib/Gtk2/PodViewer.pm, lib/Gtk2/PodViewer/Parser.pm,
	  src/podviewer: added help files, fixed some things, more
	  cleanups.

2004-03-10 14:07  jodrell

	* lib/Gtk2/PodViewer.pm, src/podviewer: fixed the "coming in from
	  the west" bug.

2004-03-10 00:00  jodrell

	* lib/Gtk2/PodViewer.pm, lib/Gtk2/PodViewer/Parser.pm,
	  src/podviewer: fixed loads of bugs, and added a few more.

2004-03-09 13:25  jodrell

	* README: added debs.

2004-03-09 13:22  jodrell

	* lib/Gtk2/PodViewer.pm, lib/Gtk2/PodViewer/Parser.pm,