@@ -1,3 +1,12 @@
+2004-09-08 10:58  jodrell
+
+	* Makefile.PL, README, lib/Gtk2/PodViewer.pm: added dependency for
+	  Locale::gettext to Makefile.PL and README, upped version.
+
+2004-09-08 10:58  jodrell
+
+	* src/podviewer: removed mask error message print.
+
 2004-09-01 11:59  jodrell
 
 	* lib/Gtk2/PodViewer.pm: corrected version.
